--- a/index.org
+++ b/index.org
@@ -3,10 +3,11 @@
 #+EMAIL: mailto:daniel.szmulewicz@gmail.com
 
 #+HTML_DOCTYPE: html5
-#+OPTIONS: html5-fancy:t tasks:nil f:t num:nil title:nil toc:nil
+#+OPTIONS: html5-fancy:t tasks:nil f:t num:nil title:nil toc:nil html-postamble:nil
 #+HTML_HEAD: <link href="css/typography.css" rel="stylesheet" type="text/css" />
-#+HTML_HEAD: <link href="css/grid.css" rel="stylesheet" type="text/css" />
+#+HTML_HEAD: <link href="css/grid2.css" rel="stylesheet" type="text/css" />
 #+HTML_HEAD: <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Roboto+Condensed|Source+Serif+Pro|Inconsolata" rel="stylesheet">
+#+HTML_HEAD: <script src="js/main.js" type="text/javascript"></script>
 #+HTML_CONTAINER: section
 
 #+BEGIN_aside
